# charm-interface-hacluster

./: .gitignore  .gitreview  README.md  common.py  interface.yaml  requires.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
interface_hacluster/: common.py  ops_ha_interface.py
unit_tests/: __init__.py  test_common.py  test_ops.py  test_requires.py
