[metadata]
name = interface_hacluster
summary = Charm interface for Hacluster using Operator Framework
version = 0.0.1.dev1
description-file =
    README.rst
author = OpenStack Charmers
author-email = openstack-charmers@lists.ubuntu.com
url = https://github.com/openstack/charm-interface-hacluster.git
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: System
    Topic :: System :: Installation/Setup
    opic :: System :: Software Distribution
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: Apache Software License
